# obstacle_detector

./: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
include/obstacle_detector/: outliers_remover.h
launch/: outlier_remover_nodelet.launch  pointcloud2scan.launch
nodelet/: outliers_remover_nodelet.cpp
src/: outliers_remover.cpp
